<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.bytedeco</groupId>
    <artifactId>opencv-stitching-jlink</artifactId>
    <version>1.5.7</version>
    <packaging>jlink</packaging>
    <properties>
        <outputModule>org.bytedeco.samples.stitching</outputModule>
        <exec.mainClass>org.bytedeco.samples.Stitching</exec.mainClass>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.bytedeco</groupId>
            <artifactId>opencv-platform</artifactId>
            <version>4.5.5-1.5.7</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jlink-plugin</artifactId>
                <version>3.1.0</version>
                <extensions>true</extensions>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <noManPages>true</noManPages>
                    <noHeaderFiles>true</noHeaderFiles>
                    <addOptions>
                        <addOption>--add-modules=ALL-SYSTEM</addOption>
                    </addOptions>
                    <launcher>stitch=${outputModule}/${exec.mainClass}</launcher>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
